--- a/variable.css
+++ b/variable.css
@@ -3,6 +3,8 @@
     --block_Color : rgb(255, 255, 255,0.2);
     --shadow_Box : 0 0 30px 0 rgba(0, 0, 0, 0.1);
     --gradient_Color : linear-gradient(to bottom right, #15b1ad,#01757a);  
+    --black_Color : #000000;
+    --white_Color : #fff;
 }
 
 ::placeholder {
