--- a/style.css
+++ b/style.css
@@ -4,6 +4,21 @@ div {
 body{
     height: 100vh;
     background-color: #005c61;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal; 
+    color: var(--black_Color);
+}
+
+/* Font */
+.active-section {
+    background-image: linear-gradient(to right,rgb(15, 160, 159,0.8),rgba(255, 255, 255, 0.1));
+}
+
+.unactive-section {
+    color: #55595b;
+    font-weight: 500;
+
 }
 
         /* App Block */
@@ -39,11 +54,16 @@ body{
 .section-item {
     display: flex;
     align-items: center;
+    height: 12%;
+    margin-bottom: 15px;
+    width: 50%;
 }
+
 
 
 .section-title{
     padding-bottom: 5px;
+    
 }
 
 .section-item-icon {
@@ -104,11 +124,11 @@ body{
     display: block;
     position: absolute;
     transform: translateY(-30px);
-    height: 35px;
+    height: 30px;
     border: hidden;
     opacity: 0.1;
     margin-left: 30px;
-    width: 300px;
+    width: 290px;
     
 }
 .navbar_notify {
@@ -230,7 +250,9 @@ body{
     flex: 1;
     display: flex;
     align-items: center;
-
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
 }
 
 .tasklist_schedule-item-time {
@@ -245,12 +267,13 @@ body{
 .tasklist_schedule-item-description {
     flex: 5;
     padding-left: 10%;
+    
 }
 
 
 .app_performance_profile {
     flex: 1.3;
-    justify-content: end;
+    justify-content: center;
 }
 
 
@@ -262,26 +285,69 @@ body{
 
 .app_performance_calendar {
     flex: 3.5 ;
+    background-color: var(--block_Color);
+    box-shadow: var(--shadow_Box);
+    border-radius: 20px;
 }
 
 .app_performance_headingpfm {
-    flex: 1 ;
+    flex: 0.7 ;
 }
 
 .app_performance_mypfm {
-    flex: 4;
+    flex: 4.3;
 }
 
 
 
 /* calender  */
 .calendar_daylist {
-    background-color: var(--block_Color);
-    box-shadow: var(--shadow_Box);
-    border-radius: 20px;
+   
 }
 
 .calendar_dayslist-day {
     list-style: none;
     display: inline-block;
+    width: 12%;
+    margin: 5px 0;
+}
+
+.app_performance_calendar_navtime {
+    justify-content: space-around
+}
+
+
+
+.app_performance_mypfm {
+    background-color: var(--block_Color);
+    box-shadow: var(--shadow_Box);
+    border-radius: 20px;
+}
+
+
+
+/* Performance */
+.app_performance_mypfm_option {
+    display: flex;
+    justify-content: space-around;
+}
+
+
+.app_performance_mypfm {
+    display: flex;
+    flex-direction: column;
+}
+
+.app_performance_mypfm_option {
+    flex: 2;
+}
+
+.app_performance_mypfm_info {
+    flex: 2;
+
+}
+
+.app_performance_mypfm_details {
+    flex: 6;
+
 }
