--- a/style.css
+++ b/style.css
@@ -47,6 +47,8 @@ body{
 
 .app_Sidebar_logout {
     flex: 1;
+    position: relative;
+    top: 70px;
 
 }
 
@@ -56,9 +58,10 @@ body{
     align-items: center;
     height: 12%;
     margin-bottom: 15px;
-    width: 50%;
-    animation: active-section 0.5s  ;
     cursor: pointer;
+    width: 50%;
+    /* animation: active-section .5s infinite ; */
+
 }
 
 
@@ -71,9 +74,6 @@ body{
 .section-item-icon {
     margin: 0 15px 0 20px;
 }
-
-
-
 
 
 
