--- a/variable.css
+++ b/variable.css
@@ -21,7 +21,7 @@ h1 {
     font-size: 10px;
 }
 
-@keyframes active-section {
+/* @keyframes active-section {
     0%{width: 0%;}
-    100%{width: 50%;}   
-}
+    50%{width: 50%} 
+} */
