--- a/style.css
+++ b/style.css
@@ -16,10 +16,13 @@ body{
 }
 
 .unactive-section {
-    color: #55595b;
+    color: var(--un-active-color);
     font-weight: 500;
 
 }
+
+
+
 
         /* App Block */
 .app-block {
@@ -91,6 +94,9 @@ body{
 
 .content_navbar {
     flex: 1.5;
+    color: var(--un-active-color);
+    font-size: smaller;
+    font-weight: 400;
 }
 
 .content_info {
@@ -105,6 +111,10 @@ body{
     flex: 5.5;
 }
 
+.content_tasklist_arrow {
+    align-self: center ;
+    cursor: pointer;
+}
 
 .content_navbar {
     display: flex;
@@ -125,11 +135,11 @@ body{
 .navbar_input-box {
     display: block;
     position: absolute;
-    transform: translateY(-30px);
-    height: 30px;
+    transform: translateY(-25px);
+    height: 25px;
     border: hidden;
-    opacity: 0.1;
-    margin-left: 30px;
+    opacity: 0;
+    margin-left: 25px;
     width: 290px;
     
 }
@@ -198,7 +208,7 @@ body{
     text-align: center;
 }
 
-.curtime_weekday {
+.curtime-weekday {
     text-align: center;
 }
 
@@ -207,17 +217,55 @@ body{
 
 
 /* Tasklist */
+
+.content_headingtasklist {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.viewall {
+    text-decoration: none;
+    color: var(--un-active-color);
+    font-size: smaller;
+    font-weight: 400;
+}
 .content_tasklist_weekday_item {
     display: flex;
     flex-direction: column;
     flex: 1;
+    cursor: pointer;
 }
 
 .weekday_item {
     flex: 1;
-    padding-top: 15%
+    padding-top: 15%;
+    color: var(--un-active-color); 
+    z-index: 1;
 }
 
+.curday {
+    /* background-color: var(--black_Color); */
+    color: var(--white_Color);
+    transition-duration: 0.5s;
+    /* border-radius: 15px;
+    transition: all 0.5s ease 0s ; */
+}
+
+/* .weekday_item-mon ,.dayof-mon {
+    color: var(--white_Color);
+} */
+
+.bg-animation {
+    position: absolute;
+    background-color: var(--black_Color);
+    z-index: 0;
+    width: 65px;
+    height: 92px;
+    border-radius: 15px;
+    left: 0;
+    transition: all 0.5s ease 0s;
+}
 
 .content_tasklist {
     display: flex;
@@ -231,6 +279,7 @@ body{
 .content_tasklist_weekday {
     flex: 3;
     display: flex;
+    position: relative;
 }
 
 .content_move-arrow {
@@ -241,9 +290,7 @@ body{
     flex: 6;
 }
 
-.hr-block {
-    border-right: 1px black solid;
-}
+
 
 .tasklist_schedule-block {
     list-style-type: none;
@@ -294,17 +341,40 @@ body{
 
 .app_performance_headingpfm {
     flex: 0.7 ;
+    position: relative;
 }
+
+.app_performance_headingpfm strong {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    height: 20px;
+
+}
+
+
 
 .app_performance_mypfm {
     flex: 4.3;
+    padding: 15px;
 }
 
+.app_performance_calendar_navtime {
+    align-items: center;
+}
 
 
 /* calender  */
 .calendar_daylist {
    
+}
+
+.calendar_navtime {
+    width: 120px;
+    text-align: center;
 }
 
 .calendar_dayslist-day {
@@ -315,7 +385,8 @@ body{
 }
 
 .app_performance_calendar_navtime {
-    justify-content: space-around
+    justify-content: space-around;
+    margin: 10px;
 }
 
 
@@ -324,6 +395,11 @@ body{
     background-color: var(--block_Color);
     box-shadow: var(--shadow_Box);
     border-radius: 20px;
+
+}
+
+.app_performance_calendar_table_row {
+    height: 30px;
 }
 
 
@@ -346,7 +422,7 @@ body{
 
 .app_performance_mypfm_info {
     flex: 2;
-
+    margin: auto;
 }
 
 .app_performance_mypfm_details {
