--- a/variable.css
+++ b/variable.css
@@ -2,9 +2,10 @@
     --main_Color : #005c61;
     --block_Color : rgb(255, 255, 255,0.2);
     --shadow_Box : 0 0 30px 0 rgba(0, 0, 0, 0.2);
-    --gradient_Color : linear-gradient(to bottom right, #15b1ad,#01757a);  
+    --gradient_Color : linear-gradient(to bottom right, #0fe4df,#01757a);  
     --black_Color : #000000;
     --white_Color : #fff;
+    --un-active-color : #918b89;
 }
 
 ::placeholder {
@@ -21,7 +22,3 @@ h1 {
     font-size: 10px;
 }
 
-/* @keyframes active-section {
-    0%{width: 0%;}
-    50%{width: 50%} 
-} */
